Fix a few scrollbar issues
This fixes the scrollbar having a white background when displayed
on the document.  The background color of the scrollbar is now
inherited from the background color of the bounding box.  To ensure
that this will always grab the right color, `background-color` was
also added to the <html> element.

This also removes the scrollbar buttons completely, as they were
previously hidden.  The scrollbar thumb now extends to the edges of
the container, so it doesn't look as strange when it stops short.
While this reduces the usability of the scrollbar, it is better
than what was previously implemented.

The invalid background colors (`none`) were changed to `transparent`
as well.  `none` is not a valid background color, and webkit was
falling back to `transparent` anyway.

--- a/styles/main.css
+++ b/styles/main.css
@@ -5,7 +5,7 @@
 
 ::-webkit-scrollbar {
     width: 10px;
-    background-color: none;
+    background-color: inherit;
 }
 
 ::-webkit-scrollbar-thumb {
@@ -13,17 +13,22 @@
     border-radius: 5px;
 }
 
+::-webkit-scrollbar-thumb:hover {
+    background-color: #545A67;
+}
+
 ::-webkit-scrollbar-track {
-    background-color: none;
+    background-color: transparent;
 }
 
 
 ::-webkit-scrollbar-button {
-    background-color: none;
+    height: 0;
+    width: 0;
 }
 
 ::-webkit-scrollbar-track-piece {
-    background-color: none;
+    background-color: transparent;
 }
 
 a {
@@ -32,6 +37,7 @@ a {
 }
 
 html {
+    background-color: #1a1c1f;
     height: 95%;
     margin: 0;
     padding: 0;
